--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,28 +3,9 @@
     background: linear-gradient(180deg, rgba(109,48,243,1) 0%, rgba(0,0,0,0) 100%);
 }
 
-.bg-color-home-25 {
-    background: rgb(109,48,243);
-    background: linear-gradient(180deg, rgba(109,48,243,1) 0%, rgba(89,39,199,1) 25%, rgba(0,0,0,0) 100%);
-}
-
-.bg-color-home-50 {
-    background: rgb(109,48,243);
-    background: linear-gradient(180deg, rgba(109,48,243,1) 0%, rgba(89,39,199,1) 50%, rgba(0,0,0,0) 100%);
-}
-
-.bg-color-home-75 {
-    background: rgb(109,48,243);
-    background: linear-gradient(180deg, rgba(109,48,243,1) 0%, rgba(89,39,199,1) 75%, rgba(0,0,0,0) 100%);
-}
-
 .bg-color-home-inverted {
     background: rgb(109,48,243);
     background: linear-gradient(0deg, rgba(109,48,243,1) 0%, rgba(0,0,0,0) 100%);
-}
-
-#landing-home {
-    height: 32vh;
 }
 
 .float {
@@ -33,14 +14,6 @@
 
 .float-alt {
     animation: float 15s ease infinite;
-}
-
-.pulse {
-    animation: pulse-color 3s infinite;
-}
-
-.pulse:focus {
-    box-shadow: 0 0 0 0.25rem transparent !important;
 }
 
 .home-logo {
@@ -95,6 +68,15 @@ hr.line {
 
 p.link-white-to-color {
     cursor: pointer;
+}
+
+footer {
+    font-size: 12px !important;
+}
+
+#head-home {
+    padding-top: 10rem !important;
+    margin-bottom: 20rem;
 }
 
 @media only screen and (max-width: 1920px) {
