Estilado basico con iconos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
                 <h5 class="text-color">Diseñada tanto uso profesional, casual y educativo.</h5>
                 <div class="row">
                     <div class="col-auto">
-                        <button class="btn btn-color text-light fw-bolder" routerLink="/register">¿Comenzamos?</button>
+                        <button class="btn btn-sm btn-color text-light fw-bolder" routerLink="/register">¿Comenzamos?</button>
                     </div>
                 </div>
             </div>
@@ -33,19 +33,19 @@
 
         <!-- FIRST MESSAGE -->
         <div class="row justify-content-end mt-5">
-            <div class="col-md-4 col-lg-4">
+            <div class="col-xl-4">
                 <div class="card bg-color border-0 shadow-sm card-hover-primary">
                     <div class="card-body border-bottom border-color text-color pb-4">
                         <div class="d-flex text-truncate align-items-center justify-content-between">
                             <h5 class="text-color fw-bolder">Bienvenido</h5>
                             <span class="fs-sm text-muted"><i class="bi bi-bell-fill"></i></span>
                         </div>
-                        <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-person-circle me-2"></i>Bienvenido a Insinia, proporcionamos herramientas para facilitar el desarrollo de las cosas.</p>
+                        <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-headset me-2"></i>Bienvenido a Insinia, proporcionamos herramientas para facilitar el desarrollo de las cosas.</p>
                     </div>
                     <div class="card-footer bg-light d-flex align-items-center py-3 text-muted border-top-0 gap-1">
-                        <button class="btn btn-color text-light shadow"><i class="bi bi-moon-stars-fill"></i></button>
-                        <button class="btn btn-color text-light shadow"><i class="bi bi-star-fill"></i></button>
-                        <button class="btn btn-color text-light shadow"><i class="bi bi-stars"></i></button>
+                        <button class="btn btn-sm btn-color text-light shadow"><i class="bi bi-moon-stars-fill"></i></button>
+                        <button class="btn btn-sm btn-color text-light shadow"><i class="bi bi-star-fill"></i></button>
+                        <button class="btn btn-sm btn-color text-light shadow"><i class="bi bi-stars"></i></button>
                     </div>
                 </div>
             </div>
@@ -55,18 +55,18 @@
         <!-- SECOND MESSAGE -->
         <div class="row justify-content-start mt-1">
             <div class="col-2"></div>
-            <div class="col-md-4 col-lg-4">
+            <div class="col-xl-4">
                 <div class="card bg-color border-0 shadow-sm card-hover-primary">
                     <div class="card-body text-color pb-4 border-bottom border-color">
                         <div class="d-flex align-items-center justify-content-between">
                             <h5 class="text-color fw-bolder">Vamos a comenzar</h5>
                             <span class="fs-sm text-muted"><i class="bi bi-bell-fill"></i></span>
                         </div>
-                        <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-person-plus-fill me-2"></i>Si no tienes una cuenta puedes crearte una ahora aquí.</p>
+                        <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-headset me-2"></i>Si no tienes una cuenta puedes crearte una ahora aquí.</p>
                     </div>
                     <div class="card-footer bg-light justify-content-end d-flex py-3 text-muted border-top-0 gap-2">
-                        <button class="btn btn-color text-light shadow" routerLink="/register">¡Crearme una!</button>
-                        <button class="btn btn-color text-light shadow" routerLink="/login">¡Ya tengo una!</button>
+                        <button class="btn btn-sm btn-color text-light shadow" routerLink="/register"><i class="bi bi-person-plus-fill me-1"></i>¡Crearme una!</button>
+                        <button class="btn btn-sm btn-color text-light shadow" routerLink="/login"><i class="bi bi-person-circle me-1"></i>¡Ya tengo una!</button>
                     </div>
                 </div>
             </div>
@@ -74,19 +74,18 @@
 
         <!-- THIRD MESSAGE -->
         <div class="row justify-content-end mt-1">
-            <div class="col-md-4 col-lg-4">
+            <div class="col-xl-4">
                 <div class="card bg-color border-0 shadow-sm card-hover-primary">
                     <div class="card-body border-bottom border-color text-color pb-4">
                         <div class="d-flex text-truncate align-items-center justify-content-between">
                             <h5 class="text-color fw-bolder">Más información</h5>
                             <span class="fs-sm text-muted"><i class="bi bi-bell-fill"></i></span>
                         </div>
-                        <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-info-circle-fill me-2"></i>Deseas saber más acerca de Insinia.</p>
+                        <p class="fw-lighter mt-3 p-0 m-0"><i class="bi bi-headset me-2"></i>¿Deseas saber más acerca de Insinia?</p>
                     </div>
                     <div class="card-footer bg-light d-flex align-items-center py-3 text-muted border-top-0 gap-2">
-                        <button class="btn btn-color text-light shadow" routerLink="/about">¡Sobre nosotros!</button>
-                        <button class="btn btn-color text-light shadow" routerLink="/contact">¡Contactanos!</button>
-                        <button class="btn btn-color text-light shadow" routerLink="/documentation">¡Documentación!</button>
+                        <button class="btn btn-sm btn-color text-light shadow" routerLink="/contact">¡Contactanos!</button>
+                        <button class="btn btn-sm btn-color text-light shadow" routerLink="/documentation">¡Documentación!</button>
                     </div>
                 </div>
             </div>
@@ -97,11 +96,12 @@
 </div>
 
 <footer class="container-fluid bg-color fixed mt-3">
+
     <div class="row bg-color-home justify-content-center">
         <div class="col-2 text-light">
             <ul>
                 <li class="list-group-item mt-3 p-0">
-                    <p class="fw-bolder">Insinia ™</p>
+                    <p class="fw-bolder mb-1">Insinia ™</p>
                 </li>
                 <li class="list-group-item p-0 m-0">
                     <div class="d-flex">
@@ -117,7 +117,7 @@
 
         <div class="col-2 text-center">
             <li class="list-group-item mt-3 p-0">
-                <p class="fw-bolder">ACCESO</p>
+                <p class="fw-bolder mb-1">ACCESO</p>
             </li>
             <li class="list-group-item p-0 m-0">
                 <p class="link-white-to-color m-0 mb-1" routerLink="/register">Register</p>
@@ -129,7 +129,7 @@
 
         <div class="col-2 text-center">
             <li class="list-group-item mt-3 p-0">
-                <p class="fw-bolder">SERVICIOS</p>
+                <p class="fw-bolder mb-1">SERVICIOS</p>
             </li>
             <li class="list-group-item p-0 m-0">
                 <p class="link-white-to-color m-0 mb-1" routerLink="/register">Sobre nosotros</p>
@@ -141,7 +141,7 @@
 
         <div class="col-2 text-center">
             <li class="list-group-item mt-3 p-0">
-                <p class="fw-bolder">CONTACTANOS</p>
+                <p class="fw-bolder mb-1">CONTACTANOS</p>
             </li>
             <li class="list-group-item p-0 m-0">
                 <p class="link-white-to-color m-0 mb-1" routerLink="/register">Escríbenos</p>
@@ -150,15 +150,16 @@
                 <p class="link-white-to-color m-0" routerLink="/login">Asistencia</p>
             </li>
         </div>
-
     </div>
+
     <div class="row">
         <div class="col text-center">
             <li class="list-group-item p-0 mt-3">
-                <p>© 2022 Todos los derechos reservados.</p>
+                <p class="opacity-50">© 2022 Todos los derechos reservados.</p>
             </li>
         </div>
     </div>
+    
 </footer>
 
 
